--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -168,15 +168,15 @@ release:
     - docker pull ${SOURCE_IMAGE}
     - docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD docker.io
   script:
-    - echo "CI_COMMIT_BRANCH = $CI_COMMIT_BRANCH"
-    - echo "CI_COMMIT_TAG = $CI_COMMIT_TAG"
+    - echo "CI_COMMIT_BRANCH = ${CI_COMMIT_BRANCH}"
+    - echo "CI_COMMIT_TAG = ${CI_COMMIT_TAG}"
     - if [ -n "$CI_COMMIT_BRANCH" ]; then
-        docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:git-$CI_COMMIT_BRANCH;
-        docker push makersquad/harp-proxy:git-$CI_COMMIT_BRANCH;
+        docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:${CI_COMMIT_BRANCH}-git;
+        docker push makersquad/harp-proxy:${CI_COMMIT_BRANCH}-git;
       fi
     - if [ -n "$CI_COMMIT_TAG" ]; then
-        docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:$CI_COMMIT_TAG;
-        docker push makersquad/harp-proxy:$CI_COMMIT_TAG;
+        docker tag ${SOURCE_IMAGE} makersquad/harp-proxy:${CI_COMMIT_TAG};
+        docker push makersquad/harp-proxy:${CI_COMMIT_TAG};
       fi
     - if [ -n "$CI_COMMIT_TAG" ]; then
         if echo "$CI_COMMIT_TAG" | grep -qE '^[0-9]+\.[0-9]+\.[0-9]+$'; then
