--- a/misc/helm/charts/harp-proxy/templates/deployment.yaml
+++ b/misc/helm/charts/harp-proxy/templates/deployment.yaml
@@ -33,6 +33,8 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            {{- toYaml (concat .Values.harp.container.command .Values.harp.container.subcommand .Values.harp.container.arguments) | nindent 12 }}
           env:
             - name: USE_PROMETHEUS
               value: 'true'
