--- a/harp_apps/proxy/examples/pooled.yml
+++ b/harp_apps/proxy/examples/pooled.yml
@@ -1,9 +1,10 @@
-proxy.endpoints:
-  - name: httpbin
-    port: 4000
-    remote:
-      endpoints:
-        - { url: "https://api1-internal.harp.demo/" }
-        - { url: "https://api2-internal.harp.demo/" }
-        - { url: "https://api3-internal.harp.demo/", pools: [fallback] }
-        - { url: "https://api4-internal.harp.demo/", pools: [fallback] }
+proxy:
+  endpoints:
+    - name: httpbin
+      port: 4000
+      remote:
+        endpoints:
+          - { url: "https://api1-internal.harp.demo/" }
+          - { url: "https://api2-internal.harp.demo/" }
+          - { url: "https://api3-internal.harp.demo/", pools: [fallback] }
+          - { url: "https://api4-internal.harp.demo/", pools: [fallback] }
