--- a/docs/apps/proxy/examples/pooled.yml
+++ b/docs/apps/proxy/examples/pooled.yml
@@ -1,7 +1,7 @@
 proxy:
   endpoints:
-    - name: httpbins
-      port: 4001
+    - name: examples
+      port: 4000
       remote:
         endpoints:
           - { url: "https://api1.example.com/" }
