--- a/misc/helm/charts/harp-proxy/templates/configmap.yaml
+++ b/misc/helm/charts/harp-proxy/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "harp-proxy.fullname" . }}
+  name: '{{ include "harp-proxy.fullname" . }}'
 data:
   harp.yaml: |
     proxy:
@@ -9,7 +9,9 @@ data:
         {{- range .Values.endpoints }}
         - port: "{{ .port }}"
           name: "{{ .name }}"
-          url: "{{ .url }}"
+          #url: "{{ .url }}"
+          remote:
+            {{ toYaml .remote | nindent 12 }}
         {{- end }}
 
     {{ toYaml .Values.settings | nindent 4 }}
