feat: restore helm support for short and long syntax

--- a/misc/helm/charts/harp-proxy/templates/configmap.yaml
+++ b/misc/helm/charts/harp-proxy/templates/configmap.yaml
@@ -9,9 +9,13 @@ data:
         {{- range .Values.endpoints }}
         - port: "{{ .port }}"
           name: "{{ .name }}"
-          #url: "{{ .url }}"
+          {{- if .url }}
+          url: "{{ .url }}"
+          {{- end }}
+          {{- if .remote }}
           remote:
             {{ toYaml .remote | nindent 12 }}
+          {{- end }}
         {{- end }}
 
     {{ toYaml .Values.settings | nindent 4 }}
