--- a/docs/Makefile
+++ b/docs/Makefile
@@ -12,9 +12,18 @@ BUILDDIR      = _build
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-.PHONY: help Makefile
+.PHONY: help Makefile dots
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+dots:
+	pyreverse harp.config.events -o dot --ignore tests
+	mv classes.dot core/events.config.dot
+
+	pyreverse harp.asgi.events -o dot --ignore tests
+	mv classes.dot core/events.asgi.dot
+
+	-@rm -f *.dot
