--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,6 +83,7 @@ sphinx-sitemap = "^2.6.0"
 sphinxcontrib-jquery = "^4.1"
 syrupy = "^4.6.1"
 testcontainers = { extras = ["postgres"], version = ">=4.7,<4.9" }
+sphinx-docsearch = "^0.0.7"
 
 
 [tool.poetry.group.mysql.dependencies]
