--- a/docs/apps/proxy/examples/full.yml
+++ b/docs/apps/proxy/examples/full.yml
@@ -7,13 +7,15 @@ proxy:
         min_pool_size: 2 # the minimum number of endpoints to try to keep in the active pool
         endpoints:
           - url: "https://api1.example.com/"
-            failure_threshold: 2
-            success_threshold: 2
           - url: "https://api2.example.com/"
-            failure_threshold: 2
-            success_threshold: 2
           - url: "https://fallback.example.com/"
             pools: [fallback]
+            liveness:
+              type: ignore
+        liveness:
+          type: naive
+          failure_threshold: 2
+          success_threshold: 2
         probe:
           method: GET
           path: /healthz
