--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -1,8 +1,37 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
+  "name": "harp-dashboard",
+  "version": "0.7.0",
   "type": "module",
+  "private": true,
+  "description": "Harp Dashboard",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "default":"./dist/index.js",
+      "require": "./dist/index.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles": {
+      "import": "./dist/styles.js",
+      "default":"./dist/styles.js",
+      "require": "./dist/styles.cjs",
+      "types": "./dist/styles.d.ts"
+    },
+    "./pages":{
+      "import": "./dist/pages.js",
+      "default":"./dist/pages.js",
+      "require": "./dist/pages.cjs",
+      "types": "./dist/pages.d.ts"
+    },
+    "./tests/browser":{
+      "import": "./dist/browser.js",
+      "default":"./dist/browser.js",
+      "require": "./dist/browser.cjs",
+      "types": "./dist/browser.d.ts"
+    }
+    },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -111,8 +140,12 @@
     "twin.macro": "^3.4.1",
     "typescript": "5.4.3",
     "vite": "^5.4.3",
+    "vite-plugin-dts": "^4.2.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.5",
     "vitest-canvas-mock": "^0.3.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.21.2"
   }
 }
