--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,19 +1,16 @@
-# Minimal makefile for Sphinx documentation
-#
-
-# You can set these variables from the command line, and also
-# from the environment for the first two.
-SPHINXOPTS    ?=
-SPHINXBUILD   ?= sphinx-build
-SOURCEDIR     = .
-BUILDDIR      = _build
+# Configuration
+SPHINXOPTS ?=
+SPHINXBUILD ?= sphinx-build
+SOURCEDIR = .
+BUILDDIR = _build
+WORKDIR := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 
 # Put it first so that "make" without argument is like "make help".
 help:
 	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 dev:
-	sphinx-autobuild . _build/html
+	sphinx-autobuild "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) --ignore $(WORKDIR)/_tags $(O)
 
 diagrams:
 	pyreverse harp.config.events -A -o dot --ignore tests
