--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ syrupy = "^4.6.1"
 testcontainers = { extras = ["postgres"], version = ">=4.7,<4.9" }
 sphinx-docsearch = "^0.0.7"
 sphinx-tags = "^0.4"
+sphinxcontrib-opendataservices-jsonschema = "^0.7.0"
 
 
 [tool.poetry.group.mysql.dependencies]
