--- a/harp_apps/dashboard/frontend/tsconfig.json
+++ b/harp_apps/dashboard/frontend/tsconfig.json
@@ -18,7 +18,11 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "ui/*": ["./ui/*"],
+      "Components/*": ["./Components/*"]
+    }
   },
   "include": ["src", "types/**/*.d.ts", "vitest.setup.ts", ".ladle", "vite.config.ts"],
   "references": [
