--- a/harp_apps/dashboard/frontend/package.json
+++ b/harp_apps/dashboard/frontend/package.json
@@ -19,6 +19,12 @@
       "require": "./dist/hooks.cjs",
       "types": "./dist/hooks.d.ts"
     },
+    "./ui": {
+      "import": "./dist/ui.js",
+      "default":"./dist/ui.js",
+      "require": "./dist/ui.cjs",
+      "types": "./dist/ui.d.ts"
+    },
     "./tests/browser":{
       "import": "./dist/browser.js",
       "default":"./dist/browser.js",
