--- a/misc/helm/charts/harp-proxy/Chart.yaml
+++ b/misc/helm/charts/harp-proxy/Chart.yaml
@@ -3,7 +3,7 @@ name: harp-proxy
 description: HTTP API Runtime Proxy
 type: application
 version: "0.7.0-alpha"
-appVersion: "0.7.0a2"
+appVersion: "0.7.0"
 
 dependencies:
   - name: postgresql
